// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell component should render a cell with closed subItems 1`] = `
<th
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <ForwardRef(IconButton)
        className="table-cell-sub-item-toggle"
        data-testid="table-cell-sub-item-toggle"
        onClick={[Function]}
        size="large"
      >
        <ForwardRef(Icon)>
          keyboard_arrow_right
        </ForwardRef(Icon)>
      </ForwardRef(IconButton)>
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</th>
`;

exports[`Cell component should render a cell with custom cell content 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <cellContent
        id="foo"
        index={0}
        name="Foo"
        relativeRowIndex={0}
        rowIndex={0}
      />
    </div>
  </div>
</td>
`;

exports[`Cell component should render a cell with custom style 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": "25px",
      "padding": 0,
      "width": "50px",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": "25px",
        "width": "50px",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": "25px",
            "lineHeight": "25pxpx",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render a cell with custom style with colspan 1`] = `
<td
  className="table-column"
  colSpan={2}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": "25px",
      "padding": 0,
      "width": 100,
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": "25px",
        "width": 100,
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": "25px",
            "lineHeight": "25pxpx",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render a cell with opened subItems 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <ForwardRef(IconButton)
        className="table-cell-sub-item-toggle"
        data-testid="table-cell-sub-item-toggle"
        onClick={[Function]}
        size="large"
      >
        <ForwardRef(Icon)>
          keyboard_arrow_down
        </ForwardRef(Icon)>
      </ForwardRef(IconButton)>
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render a cell with subItems (hideSubItemsOpener) 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render a header cell 1`] = `
<th
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</th>
`;

exports[`Cell component should render a selected cell 1`] = `
<td
  className="table-column selected"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render the cell with a custom class Name 1`] = `
<td
  className="table-column custom-className"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title=""
      >
        <div
          className="cell-skeleton-container"
          style={
            {
              "height": 56,
              "lineHeight": "56px",
            }
          }
        >
          <ForwardRef(Skeleton)
            height={15}
            variant="rectangular"
            width={30}
          />
        </div>
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render the default cell 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title="bar"
      >
        bar
      </div>
    </div>
  </div>
</td>
`;

exports[`Cell component should render the loading cell 1`] = `
<td
  className="table-column"
  colSpan={1}
  data-testid="table-column"
  onContextMenu={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseUp={[Function]}
  style={
    {
      "height": 56,
      "padding": 0,
      "width": "auto",
    }
  }
>
  <div
    className="table-overflow-wrapper"
    data-testid="table-cell-wrapper-foo"
    style={
      {
        "height": 56,
        "width": "auto",
      }
    }
  >
    <div
      className="table-cell-container"
      style={
        {
          "justifyContent": undefined,
        }
      }
    >
      <div
        className="cell-value"
        style={
          {
            "height": 56,
            "lineHeight": "56px",
          }
        }
        title=""
      >
        <div
          className="cell-skeleton-container"
          style={
            {
              "height": 56,
              "lineHeight": "56px",
            }
          }
        >
          <ForwardRef(Skeleton)
            height={15}
            variant="rectangular"
            width={30}
          />
        </div>
      </div>
    </div>
  </div>
</td>
`;
